fix parameters for hash computation measurements

--- a/benchmarks/measure_true_sim_runtimes.ipynb
+++ b/benchmarks/measure_true_sim_runtimes.ipynb
@@ -38,11 +38,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "data_end_size 300\n",
-      "data sets range(100, 301, 100)\n",
-      "Computing true_dtw_cy for porto with 1 jobs\n",
-      "           100       200       300\n",
-      "run_1  1.24249  3.403208  7.955971\n"
+      "data_end_size 3000\n",
+      "data sets range(3000, 3001, 100)\n",
+      "Computing true_dtw_cy for porto with 5 jobs\n",
+      "             300000, set 1/1\n",
+      "run_1  787.842077\n",
+      "run_2  787.995118\n",
+      "run_3  787.907933\n",
+      "run_4  787.743240\n",
+      "run_5  787.490268\n"
      ]
     }
    ],
@@ -51,9 +55,9 @@
     "\n",
     "measure=\"true_dtw_cy\"\n",
     "city=\"porto\"\n",
-    "parallel_jobs = 1\n",
-    "data_start_size = 100\n",
-    "data_end_size = 500\n",
+    "parallel_jobs = 5\n",
+    "data_start_size = 3000\n",
+    "data_end_size = 3000\n",
     "data_step_size = 100\n",
     "\n",
     "compute_true_similarity_runtimes(measure=measure, city=city, parallel_jobs=parallel_jobs, data_start_size=data_start_size, data_end_size=data_end_size, data_step_size=data_step_size)"
