--- a/hashed_similarities/measure_hashed_sim_runtimes.ipynb
+++ b/hashed_similarities/measure_hashed_sim_runtimes.ipynb
@@ -46,12 +46,22 @@
      "output_type": "stream",
      "text": [
       "Computing grid_dtw_cy for porto with 5 jobs\n",
+      "Average length of keys in hashes: 3.41\n",
+      "Elapsed time for hash generation in set 100: 0.06325000000651926\n",
+      "Average length of keys in hashes: 2.775\n",
+      "Elapsed time for hash generation in set 200: 0.08236125006806105\n",
+      "Average length of keys in hashes: 2.8566666666666665\n",
+      "Elapsed time for hash generation in set 300: 0.11355570890009403\n",
+      "Average length of keys in hashes: 2.9325\n",
+      "Elapsed time for hash generation in set 400: 0.1843679160811007\n",
+      "Average length of keys in hashes: 3.608\n",
+      "Elapsed time for hash generation in set 500: 0.17405533406417817\n",
       "            100       200       300       400       500\n",
-      "run_1  0.153158  0.605071  1.295102  2.309179  3.492663\n",
-      "run_2  0.145902  0.588271  1.336958  2.226940  3.595378\n",
-      "run_3  0.146391  0.563510  1.339752  2.232648  3.589008\n",
-      "run_4  0.212220  0.580201  1.339176  2.356759  3.505701\n",
-      "run_5  0.146280  0.559115  1.291246  2.298517  3.473409\n"
+      "run_1  0.075188  0.301045  0.614193  1.134088  1.811749\n",
+      "run_2  0.103721  0.282827  0.622608  1.141972  1.836114\n",
+      "run_3  0.079515  0.299477  0.616469  1.172980  1.812233\n",
+      "run_4  0.119923  0.283214  0.622201  1.139510  1.751462\n",
+      "run_5  0.076789  0.313607  0.616048  1.185300  1.778877\n"
      ]
     }
    ],
@@ -60,11 +70,11 @@
     "\n",
     "measure=\"grid_dtw_cy\"\n",
     "city=\"porto\"\n",
-    "res=0.5\n",
-    "layers=4\n",
+    "res=1.6\n",
+    "layers=5\n",
     "parallel_jobs = 5\n",
-    "data_start_size = 100\n",
-    "data_end_size = 500\n",
+    "data_start_size = 3000\n",
+    "data_end_size = 3000\n",
     "data_step_size = 100\n",
     "\n",
     "compute_grid_similarity_runtimes(measure=measure, city=city, res=res, layers=layers, parallel_jobs=parallel_jobs, data_start_size=data_start_size, data_end_size=data_end_size, data_step_size=data_step_size)"
@@ -86,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -94,12 +104,14 @@
      "output_type": "stream",
      "text": [
       "Computing disk_dtw_cy for porto with 5 jobs\n",
-      "            100       200       300       400       500\n",
-      "run_1  0.062911  0.287202  0.516578  1.185704  1.566689\n",
-      "run_2  0.092977  0.237542  0.484097  1.071445  1.560364\n",
-      "run_3  0.071223  0.231594  0.487469  1.128040  1.562155\n",
-      "run_4  0.105433  0.233696  0.497933  1.141500  1.559377\n",
-      "run_5  0.118187  0.229757  0.485707  1.130927  1.572263\n"
+      "Average length of keys in hashes: 10.301\n",
+      "Elapsed time for hash generation in set 3000: 4.150663458043709\n",
+      "             3000\n",
+      "run_1  186.145584\n",
+      "run_2  179.377963\n",
+      "run_3  179.320001\n",
+      "run_4  179.268669\n",
+      "run_5  186.227069\n"
      ]
     }
    ],
@@ -108,13 +120,13 @@
     "\n",
     "measure=\"disk_dtw_cy\"\n",
     "city=\"porto\"\n",
-    "diameter=0.5\n",
+    "diameter=2.2\n",
     "layers=4\n",
-    "disks=100\n",
+    "disks=60\n",
     "parallel_jobs = 5\n",
-    "data_start_size = 100\n",
-    "data_end_size = 500\n",
-    "data_step_size = 100\n",
+    "data_start_size = 3000\n",
+    "data_end_size = 3000\n",
+    "data_step_size = 500\n",
     "\n",
     "compute_disk_similarity_runtimes(measure=measure, city=city, diameter=diameter, layers=layers, disks=disks, parallel_jobs=parallel_jobs, data_start_size=data_start_size, data_end_size=data_end_size, data_step_size=data_step_size)"
    ]
