--- a/processing/kol_clean_data.ipynb
+++ b/processing/kol_clean_data.ipynb
@@ -28,9 +28,9 @@
     "LOG = False  # Set to true for printing/debug during data extraction\n",
     "\n",
     "OUTPUT_FOLDER = f\"../{KOLUMBUS_OUTPUT_FOLDER}\"\n",
-    "RAW_DATA_FILE = \"../dataset/kolumbus/2023-09-04.csv\"\n",
+    "RAW_DATA_FILE = \"../dataset/kolumbus/combined.csv\"\n",
     "\n",
-    "NUMBER_OF_TRACES = 1000\n",
+    "NUMBER_OF_TRACES = 3000\n",
     "MAX_TIME_DIFF_SECONDS = (\n",
     "    32  # Maximum time difference between two consecutive trackpoints in a trajectory\n",
     ")"
@@ -138,7 +138,7 @@
     "        last_timestamp = current_timestamp\n",
     "        last_driver_id = current_driver_id\n",
     "        # Check if trajectory is empty\n",
-    "        if len(trajectory) > 0:\n",
+    "        if len(trajectory) >= 200:\n",
     "            save_current_trajectory(\n",
     "                OUTPUT_FOLDER=OUTPUT_FOLDER,\n",
     "                file_name=name_counter,\n",
@@ -163,7 +163,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# create_meta_files(path_to_files=OUTPUT_FOLDER, data_prefix=\"K_\", create_test_set=True)"
+    "create_meta_files(path_to_files=OUTPUT_FOLDER, data_prefix=\"K_\", number=100, create_test_set=True)"
    ]
   }
  ],
@@ -183,7 +183,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6+"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
