--- a/processing/rome_clean_data.ipynb
+++ b/processing/rome_clean_data.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -323,12 +323,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "# create_meta_files(path_to_files=OUTPUT_FOLDER,\n",
-    "#                   data_prefix=\"R_\", create_test_set=True)"
+    "#                   data_prefix=\"R_\", number=250, create_test_set=True)"
    ]
   }
  ],
@@ -348,7 +348,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.11.6+"
   }
  },
  "nbformat": 4,
